Added new content related to my profile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="#home">B<span>.Kv</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -39,10 +39,10 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Prakash Shahi</div>
+                <div class="text-1">Hello, My name is</div>
+                <div class="text-2">Bhashitha Kaveesh</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a style="text-decoration: none;" href="https://www.linkedin.com/in/bhashitha-kaveesh/" target="_blank">Hire me</a>
             </div>
         </div>
     </section>
@@ -53,12 +53,103 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/profile.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Prakash and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
-                    <a href="#">Download CV</a>
+                    <div class="text">I'm Kaveesh and I'm a <span class="typing-2"></span></div>
+                    <p>Motivated Software Engineering graduate with a TopUp degree from
+                        LMU and undergraduate from University of Kelaniya, eager to embark
+                        on a career. Proficient in Java and C#, with a keen interest in web
+                        technologies. Skilled in technically designing, testing, and maintaining
+                        software solutions. Possesses strong analytical skills, proactive attitude,
+                        and a commitment to delivering quality work</p>
+
+                        <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
+                            <div><a style="border: none; background-color: white;" href="https://www.linkedin.com/in/bhashitha-kaveesh/" target="_blank" rel="noopener noreferrer"><img style="height:50px; width: 50px;" src="icons/linkedin.png" alt="LinkedIn"></a></div>
+                            <div><a style="border: none; background-color: white;" href="https://github.com/kaveeshbhashitha" target="_blank" rel="noopener noreferrer"><img style="height:50px; width: 50px;" src="icons/github.png" alt="GitHub"></a></div>
+                            <div><a style="border: none; background-color: white;" href="mailto:kaveesh-ps20021@stu.kln.ac.lk"><img style="height:50px; width: 50px;" src="icons/outlook.png" alt="Outlook"></a></div>
+                            <div><a style="border: none; background-color: white;" href="mailto:kaveeshbhashitha@gmail.com"><img style="height:50px; width: 50px;" src="icons/new.png" alt="Gmail"></a></div>
+                            <div><a style="border: none; background-color: white;" href="tel:+94713116142"><img style="height:50px; width: 50px;" src="icons/telephone.png" alt="Mobile"></a></div>
+                        </div>
+
+                    <a style="text-decoration: none;" href="https://drive.google.com/file/d/1MOMkezuzgSFaH_bNr4uANntrHioq83n0/view?usp=sharing">Download CV</a>
+                </div>
+            </div>
+            <div class="skillss"><h3>My Technical Skills</h3></div>
+            <div class="myskills">
+                <div class="skillset">
+                    <h5 class="plang">Programming Languages</h5>
+                    <ul style="display: flex; flex-wrap: wrap;">
+                        <li class="listitem">C#</li>
+                        <li class="listitem">Java</li>
+                        <li class="listitem">C</li>
+                        <li class="listitem">Python</li>
+                        <li class="listitem">PHP</li>
+                    </ul>
+                </div>
+                <div class="skillset">
+                    <h5 class="plang">Databases</h5>
+                    <ul style="display: flex; flex-wrap: wrap;">
+                        <li class="listitem">MS SQL Server</li>
+                        <li class="listitem">MySQL</li>
+                        <li class="listitem">Oracle</li>
+                    </ul>
+                </div>
+                <div class="skillset">
+                    <h5 class="plang">Web Development</h5>
+                    <ul style="display: flex; flex-wrap: wrap;">
+                        <li class="listitem">HTML</li>
+                        <li class="listitem">CSS</li>
+                        <li class="listitem">JavaScript</li>
+                        <li class="listitem">React.Js</li>
+                        <li class="listitem">PHP</li>
+                    </ul>
+                </div>
+                <div class="skillset">
+                    <h5 class="plang">Frameworks</h5>
+                    <ul style="display: flex; flex-wrap: wrap;">
+                        <li class="listitem">Spring/SpringBoot</li>
+                        <li class="listitem">.NET</li>
+                        <li class="listitem">Laravel/Jetstream</li>
+                    </ul>
+                </div>
+                <div class="skillset">
+                    <h5 class="plang">Version Control</h5>
+                    <ul style="display: flex; flex-wrap: wrap;">
+                        <li class="listitem">Git</li>
+                        <li class="listitem">GitHub</li>
+                    </ul>
+                </div>
+                <div class="skillset">
+                    <h5 class="plang">Cloud</h5>
+                    <ul style="display: flex; flex-wrap: wrap;">
+                        <li class="listitem">Microsoft Azure</li>
+                    </ul>
+                </div>
+                <div class="skillset">
+                    <h5 class="plang">Environment</h5>
+                    <ul style="display: flex; flex-wrap: wrap;">
+                        <li class="listitem">Agile</li>
+                        <li class="listitem">SCRUM</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="seperator"></div>
+
+            <div class="skillss"><h3>My Non-Technical Skills</h3></div>
+                <div class="skillset">
+                    <ul style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+                        <li class="listitem gapbet">Time Management</li>
+                        <li class="listitem gapbet">Interpersonal & Communication</li>
+                        <li class="listitem gapbet">Problem Solving</li>
+                        <li class="listitem gapbet">Critical & Analytical Thinking</li>
+                        <li class="listitem gapbet">Innovation</li>
+                        <li class="listitem gapbet">Reasoning & Troubleshooting</li>
+                        <li class="listitem gapbet">Adaptability</li>
+                        <li class="listitem gapbet">Attention on Details</li>
+                        <li class="listitem gapbet">Working under Preasure</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -71,23 +162,23 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <img src="icons/www.png" alt="">
+                        <div class="text">Web Applications</div>
+                        <p>Web applications for your company, personal usage or university projects</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <img src="icons/data.png" alt="">
+                        <div class="text">Web Sites</div>
+                        <p>Peronsal Portfolio, Commercial websites and academic web projects</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">Desktop Application</div>
+                        <p></p>
                     </div>
                 </div>
                </div>
@@ -254,5 +345,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </body>
 </html>
