Update content for profile infor

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
-                <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Teams</a></li>
-                <li><a href="#contact" class="menu-btn">Contact</a></li>
+                <li><a href="#teams" class="menu-btn">Projects</a></li>
+                <li><a href="#contact" class="menu-btn">My Studies</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -162,23 +161,23 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <img src="icons/www.png" alt="">
+                        <img src="icons/www.png" alt="WWW">
                         <div class="text">Web Applications</div>
                         <p>Web applications for your company, personal usage or university projects</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="icons/data.png" alt="">
+                        <img src="icons/data.png" alt="Data">
                         <div class="text">Web Sites</div>
                         <p>Peronsal Portfolio, Commercial websites and academic web projects</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
+                        <img src="icons/prg.png" alt="Prg">
                         <div class="text">Desktop Application</div>
-                        <p></p>
+                        <p>Desktop applications for domestic usage and university projects</p>
                     </div>
                 </div>
                </div>
@@ -186,95 +185,57 @@
         </div>
     </section>
 
-    <!-- skills section start -->
-    <section class="skills" id="skills">
-        <div class="max-width">
-            <h2 class="title">My skills</h2>
-            <div class="skills-content">
-                <div class="column left">
-                    <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
-                    <a href="#">Read more</a>
-                </div>
-                <div class="column right">
-                    <div class="bars">
-                        <div class="info">
-                            <span>HTML</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="line html"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>CSS</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="line css"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>JavaScript</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>PHP</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line php"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>MySQL</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line mysql"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- teams section start -->
+    <!-- teams section start #DC143C -->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">My teams</h2>
+            <h2 class="title">My Projects</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="icons/lab.png" alt="" style="width: 100px; height: 100px; padding: 20px;">
+                        <div class="text">MicroGrid-Lab Project</div>
+                        <h6 style="margin: 10px 0 10px 0;">Website for Research lab developed with Larevel-Jetstream, PHP, MySQL, Bootstrap and Tailwind CSS</h6>
+                        <a style="text-decoration: none; background-color: #DC143C; color: white; border-radius: 3px; padding: 3px 10px 3px 10px;" href="https://github.com/kaveeshbhashitha/MicroGridLab" target="_blank">Hire me</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="icons/employee.png" alt="" style="width: 100px; height: 100px;">
+                        <div class="text">Hospital Managment system</div>
+                        <h6 style="margin: 10px 0 10px 0;">Hospital Management system with React.js, Springboot (Java) and MySQL database.</h6>
+                        <a style="text-decoration: none; background-color: #DC143C; color: white; border-radius: 3px; padding: 3px 10px 3px 10px;" href="https://github.com/kaveeshbhashitha/HMS-Application" target="_blank">Hire me</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="icons/travel.png" alt="" style="width: 100px; height: 100px;">
+                        <div class="text">Aerospace Shopping System</div>
+                        <h6 style="margin: 10px 0 10px 0;">Aerospace service commercial project with .NET C# (MVC), Bootstrap and MS SQL server database system.</h6>
+                        <a style="text-decoration: none; background-color: #DC143C; color: white; border-radius: 3px; padding: 3px 10px 3px 10px;" href="https://github.com/kaveeshbhashitha/Rythose" target="_blank">Hire me</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="icons/car-rent.png" alt="" style="width: 100px; height: 100px;">
+                        <div class="text">Rent a car service</div>
+                        <h6 style="margin: 10px 0 10px 0;">Rent a car service management system developed with C# and MS SQL server database - Desktop application</h6>
+                        <a style="text-decoration: none; background-color: #DC143C; color: white; border-radius: 3px; padding: 3px 10px 3px 10px;" href="https://github.com/kaveeshbhashitha/Rent-a-car-service-managment-system" target="_blank">Hire me</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="icons/bank.png" alt="" style="width: 100px; height: 100px;">
+                        <div class="text">Banking system</div>
+                        <h6 style="margin: 10px 0 10px 0;">Command line banking system with C language for simple university project.</h6>
+                        <a style="text-decoration: none; background-color: #DC143C; color: white; border-radius: 3px; padding: 3px 10px 3px 10px;" href="https://github.com/kaveeshbhashitha/Banking-system" target="_blank">Hire me</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="icons/chatbot.png" alt="" style="width: 100px; height: 100px;">
+                        <div class="text">Talking Chatbot</div>
+                        <h6 style="margin: 10px 0 10px 0;">Talking chatbot with Python, Tenserflow, Keras and JSON AI model for chat responses related to hospital services.</h6>
+                        <a style="text-decoration: none; background-color: #DC143C; color: white; border-radius: 3px; padding: 3px 10px 3px 10px;" href="https://github.com/kaveeshbhashitha/AI-chatBot" target="_blank">Hire me</a>
                     </div>
                 </div>
             </div>
@@ -284,7 +245,7 @@
     <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title">Contact me</h2>
+            <h2 class="title">My Studies</h2>
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
@@ -341,7 +302,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://www.linkedin.com/in/bhashitha-kaveesh/">Kaveesh</a> | <span class="far fa-copyright"></span> <script>document.write(new Date().getFullYear())</script> All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
