final commit for today

--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <img src="icons/www.png" alt="WWW">
+                        <img src="icons/data.png" alt="WWW">
                         <div class="text">Web Applications</div>
                         <p>Web applications for your company, personal usage or university projects</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="icons/data.png" alt="Data">
+                        <img src="icons/www.png" alt="Data">
                         <div class="text">Web Sites</div>
                         <p>Peronsal Portfolio, Commercial websites and academic web projects</p>
                     </div>
@@ -247,55 +247,44 @@
         <div class="max-width">
             <h2 class="title">My Studies</h2>
             <div class="contact-content">
-                <div class="column left">
-                    <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
-                    <div class="icons">
-                        <div class="row">
-                            <i class="fas fa-user"></i>
-                            <div class="info">
-                                <div class="head">Name</div>
-                                <div class="sub-title">Prakash Shahi</div>
+                <table>
+                    <tr>
+                        <td><img src="images/uok.png" alt="" class="uok"></td>
+                        <td>
+                            <div class="textstd">
+                                <h4>University of Kelaniya, Sri Lanka</h4>
+                                <h5>August, 2022 - February, 2025</h5>
+                                <h6>BSc in Physical Science</h6>
                             </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="info">
-                                <div class="head">Address</div>
-                                <div class="sub-title">Surkhet, Nepal</div>
+                        </td>
+                        <td><img src="images/lmu.png" alt="" class="prs"></td>
+                        <td>
+                            <div class="textstd">
+                                <h4>London Metropolitan University, Lodon, UK</h4>
+                                <h5>March, 2023 - March, 2024</h5>
+                                <h6>BEng in Software Engineering</h6>
                             </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-envelope"></i>
-                            <div class="info">
-                                <div class="head">Email</div>
-                                <div class="sub-title">abc@gmail.com</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><img src="images/prs.png" alt="" class="lmu"></td>
+                        <td>
+                            <div class="textstd">
+                                <h4>Pearson, UK</h4>
+                                <h5>January, 2021 - January, 2023</h5>
+                                <h6>HND in Computing</h6>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="column right">
-                    <div class="text">Message me</div>
-                    <form action="#">
-                        <div class="fields">
-                            <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                        </td>
+                        <td><img src="images/esoft.jpg" alt="" class="est"></td>
+                        <td>
+                            <div class="textstd">
+                                <h4>ESOFT Metro College, Sri Lanka</h4>
+                                <h5>January, 2018 - August, 2018</h5>
+                                <h6>Diploma in English and IT</h6>
                             </div>
-                            <div class="field email">
-                                <input type="email" placeholder="Email" required>
-                            </div>
-                        </div>
-                        <div class="field">
-                            <input type="text" placeholder="Subject" required>
-                        </div>
-                        <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
-                        </div>
-                        <div class="button-area">
-                            <button type="submit">Send message</button>
-                        </div>
-                    </form>
-                </div>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </section>
