--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +11,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-
 </head>
 <body>
     <div class="scroll-up-btn">
@@ -55,7 +53,7 @@
                     <img src="images/profile.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Kaveesh and I'm a <span class="typing-2"></span></div>
+                    <div class="text runningtext">I'm Kaveesh and I'm a <span class="typing-2"></span></div>
                     <p>Motivated Software Engineering graduate with a TopUp degree from
                         LMU and undergraduate from University of Kelaniya, eager to embark
                         on a career. Proficient in Java and C#, with a keen interest in web
@@ -71,7 +69,7 @@
                             <div><a style="border: none; background-color: white;" href="tel:+94713116142"><img style="height:50px; width: 50px;" src="icons/telephone.png" alt="Mobile"></a></div>
                         </div>
 
-                    <a style="text-decoration: none;" href="https://drive.google.com/file/d/1MOMkezuzgSFaH_bNr4uANntrHioq83n0/view?usp=sharing">Download CV</a>
+                    <a class="runningtext" style="text-decoration: none;" href="https://drive.google.com/file/d/1MOMkezuzgSFaH_bNr4uANntrHioq83n0/view?usp=sharing">Download CV</a>
                 </div>
             </div>
             <div class="skillss"><h3>My Technical Skills</h3></div>
