Final update for website by changing main image

--- a/index.html
+++ b/index.html
@@ -77,57 +77,57 @@
                 <div class="skillset">
                     <h5 class="plang">Programming Languages</h5>
                     <ul style="display: flex; flex-wrap: wrap;">
-                        <li class="listitem">C#</li>
-                        <li class="listitem">Java</li>
-                        <li class="listitem">C</li>
-                        <li class="listitem">Python</li>
-                        <li class="listitem">PHP</li>
+                        <li class="listitem prl">C#</li>
+                        <li class="listitem prl">Java</li>
+                        <li class="listitem prl">C</li>
+                        <li class="listitem prl">Python</li>
+                        <li class="listitem prl">PHP</li>
                     </ul>
                 </div>
                 <div class="skillset">
                     <h5 class="plang">Databases</h5>
                     <ul style="display: flex; flex-wrap: wrap;">
-                        <li class="listitem">MS SQL Server</li>
-                        <li class="listitem">MySQL</li>
-                        <li class="listitem">Oracle</li>
+                        <li class="listitem dbs">MS SQL Server</li>
+                        <li class="listitem dbs">MySQL</li>
+                        <li class="listitem dbs">Oracle</li>
                     </ul>
                 </div>
                 <div class="skillset">
                     <h5 class="plang">Web Development</h5>
                     <ul style="display: flex; flex-wrap: wrap;">
-                        <li class="listitem">HTML</li>
-                        <li class="listitem">CSS</li>
-                        <li class="listitem">JavaScript</li>
-                        <li class="listitem">React.Js</li>
-                        <li class="listitem">PHP</li>
+                        <li class="listitem prl">HTML</li>
+                        <li class="listitem prl">CSS</li>
+                        <li class="listitem prl">JavaScript</li>
+                        <li class="listitem prl">React.Js</li>
+                        <li class="listitem prl">PHP</li>
                     </ul>
                 </div>
                 <div class="skillset">
                     <h5 class="plang">Frameworks</h5>
                     <ul style="display: flex; flex-wrap: wrap;">
-                        <li class="listitem">Spring/SpringBoot</li>
-                        <li class="listitem">.NET</li>
-                        <li class="listitem">Laravel/Jetstream</li>
+                        <li class="listitem fms">Spring/SpringBoot</li>
+                        <li class="listitem fms">.NET</li>
+                        <li class="listitem fms">Laravel/Jetstream</li>
                     </ul>
                 </div>
                 <div class="skillset">
                     <h5 class="plang">Version Control</h5>
                     <ul style="display: flex; flex-wrap: wrap;">
-                        <li class="listitem">Git</li>
-                        <li class="listitem">GitHub</li>
+                        <li class="listitem prl">Git</li>
+                        <li class="listitem prl">GitHub</li>
                     </ul>
                 </div>
                 <div class="skillset">
                     <h5 class="plang">Cloud</h5>
                     <ul style="display: flex; flex-wrap: wrap;">
-                        <li class="listitem">Microsoft Azure</li>
+                        <li class="listitem fms">Microsoft Azure</li>
                     </ul>
                 </div>
                 <div class="skillset">
                     <h5 class="plang">Environment</h5>
                     <ul style="display: flex; flex-wrap: wrap;">
-                        <li class="listitem">Agile</li>
-                        <li class="listitem">SCRUM</li>
+                        <li class="listitem fms">Agile</li>
+                        <li class="listitem fms">SCRUM</li>
                     </ul>
                 </div>
             </div>
@@ -137,15 +137,16 @@
             <div class="skillss"><h3>My Non-Technical Skills</h3></div>
                 <div class="skillset">
                     <ul style="display: flex; flex-wrap: wrap; justify-content: space-between;">
-                        <li class="listitem gapbet">Time Management</li>
-                        <li class="listitem gapbet">Interpersonal & Communication</li>
-                        <li class="listitem gapbet">Problem Solving</li>
-                        <li class="listitem gapbet">Critical & Analytical Thinking</li>
-                        <li class="listitem gapbet">Innovation</li>
-                        <li class="listitem gapbet">Reasoning & Troubleshooting</li>
-                        <li class="listitem gapbet">Adaptability</li>
-                        <li class="listitem gapbet">Attention on Details</li>
-                        <li class="listitem gapbet">Working under Preasure</li>
+                        <li class="listitem gapbet dbs">Time Management</li>
+                        <li class="listitem gapbet fms">Interpersonal & Communication</li>
+                        <li class="listitem gapbet prl">Problem Solving</li>
+                        <li class="listitem gapbet fms">Critical & Analytical Thinking</li>
+                        <li class="listitem gapbet dbs">Innovation</li>
+                        <li class="listitem gapbet fms">Reasoning & Troubleshooting</li>
+                        <li class="listitem gapbet dbs">Adaptability</li>
+                        <li class="listitem gapbet fms">Monitoring</li>
+                        <li class="listitem gapbet dbs">Attention on Details</li>
+                        <li class="listitem gapbet fms">Working under Preasure</li>
                     </ul>
                 </div>
             </div>
