--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
                                 <h4>ESOFT Metro College, Sri Lanka</h4>
                                 <h5>January, 2018 - August, 2018</h5>
                                 <h6>Diploma in English and IT</h6>
+                                <a href="personal-blog/home.html">Test</a>
                             </div>
                         </td>
                     </tr>
